--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </p>
             </div>
             <div class="md:w-1/2 absolute right-0 top-0 h-full">
-                <img src="IMG_8580.jpg" alt="Couple photo" class="w-full h-full object-cover">
+                <img src="image8.png" alt="Couple photo" class="w-full h-full object-cover">
             </div>
         </div>
     </section>
