--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <img src="polaroid3.png" alt="Gift polaroid" class="mx-auto w-64 h-auto object-contain mb-4">
                     <h3 class="text-2xl font-semibold">Gift Preference</h3>
                     <p class="text-lg text-gray-700 leading-relaxed mt-4">
-                        Your presence is the greatest gift, but if you wish to contribute, we kindly request cash gifts to help us build our future together.
+                        Your presence is the greatest gift, but if you wish to contribute, we kindly request cash gifts.
                     </p>
                 </div>
                 <div>
